# SmartBudget

./: .gitignore  CMakeLists.txt  README.md  imgui.ini  teste.csv
SmartBudget/include/: appUI.hpp  fileManager.hpp
SmartBudget/src/: appUI.cpp  appUI2.cpp  budgetAnalyzer.cpp  build.bat  fileManager.cpp  main.cpp  main2.cpp  transaction.cpp  transactionManager.cpp
docs/: index.html  instruc_filled.md  old_projectTree.txt  slide.md
imgui/: imgui.h  imgui_internal.h
include/: appUI.hpp  appUI2.hpp  budgetAnalyzer.hpp  fileManager.hpp  transaction.hpp  transactionManager.hpp
lib/imgui/: imgui.h  imgui_internal.h
lib/imgui/backends/: imgui_impl_glfw.h  imgui_impl_opengl3.h
src/: a.csv  appUI.cpp  appUI2.cpp  budgetAnalyzer.cpp  build.bat  fileManager.cpp  main.cpp  main2.cpp  main_example.cpp.backup  old_main.cpp  smartbudget  teste.csv  transaction.cpp  transactionManager.cpp
